--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Unofficial Cycle.js driver for Redux",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "prepublish": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch"
   },
   "keywords": [
     "cycle",
@@ -15,13 +18,20 @@
   "author": "Sunny G <sunny.gonna@gmail.com> (http://blog.sunnyg.io)",
   "license": "ISC",
   "dependencies": {
+    "@cycle/run": "*",
+    "@types/ramda": "0.0.4",
+    "flux-standard-action": "^1.2.0",
+    "ramda": "^0.23.0",
     "redux": "^3.6.0",
-    "rx": "^4.1.0"
+    "xstream": "^10.3.0"
   },
   "devDependencies": {
-    "flow-bin": "^0.38.0"
-  },
-  "directories": {
-    "test": "test"
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "ts-loader": "^2.0.1",
+    "typescript": "^2.2.1",
+    "webpack": "^2.2.1"
   }
 }
