--- a/package.json
+++ b/package.json
@@ -7,6 +7,31 @@
     "build": "webpack",
     "build:watch": "npm run build -- --watch",
     "prepublish": "npm run build",
+    "test": "jest --no-cache",
+    "test:watch": "npm run test -- --watch"
+  },
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "transform-es2015-modules-commonjs"
+        ]
+      }
+    }
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/test/*.(ts|js)"
+    ],
+    "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
+    "transform": {
+      "\\.(ts|js)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    }
   },
   "keywords": [
     "cycle",
@@ -25,10 +50,14 @@
     "xstream": "^10.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^19.2.2",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2",
+    "ts-jest": "^19.0.1",
     "ts-loader": "^2.0.1",
     "typescript": "^2.2.1",
     "webpack": "^2.2.1"
