--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     ],
     "testEnvironment": "node",
     "testMatch": [
-      "**/test/*.(ts|js)"
+      "**/test/*.test.(ts|js)"
     ],
     "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
     "transform": {
