--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "target": "es6",
+    "declaration": true,
 
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
@@ -15,6 +16,8 @@
 
   "exclude": [
     "node_modules",
-    "example"
+    "dist",
+    "example",
+    "test"
   ]
 }
