--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,13 @@
   "compilerOptions": {
     "module": "es2015",
     "moduleResolution": "node",
-    "target": "es6",
+    "target": "es5",
     "declaration": true,
+    "sourceMap": true,
+    "outDir": "dist/es2015",
 
-    "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true,
-    "listEmittedFiles": true,
-    "listFiles": true,
-    "sourceMap": true
+    "alwaysStrict": true
   },
 
   "exclude": [
