--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sunny-g/cycle-redux-driver",
   "version": "0.1.9",
-  "description": "(u)nofficial Redux Action and State driver for Cycle.js",
+  "description": "(un)official Redux Action and State driver for Cycle.js",
   "author": "Sunny G <sunny.gonna@gmail.com> (http://blog.sunnyg.io)",
   "homepage": "https://github.com/sunny-g/cycle-redux-driver",
   "repository": "https://github.com/sunny-g/cycle-redux-driver",
