--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "@sunny-g/cycle-redux-driver",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "(un)official Redux Action and State driver for Cycle.js",
   "author": "Sunny G <sunny.gonna@gmail.com> (http://blog.sunnyg.io)",
   "homepage": "https://github.com/sunny-g/cycle-redux-driver",
   "repository": "https://github.com/sunny-g/cycle-redux-driver",
   "bugs": "https://github.com/sunny-g/cycle-redux-driver/issues",
   "license": "ISC",
-  "main": "dist/cycle-redux-driver.js",
-  "module": "dist/es2015/index.js",
-  "types": "dist/es2015/index.d.ts",
+  "main": "commonjs/cycle-redux-driver.js",
+  "module": "es2015/index.js",
+  "types": "es2015/index.d.ts",
   "files": [
-    "dist",
-    "src/"
+    "commonjs",
+    "es2015",
+    "src"
   ],
   "keywords": [
     "cycle",
