--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sunny-g/cycle-redux-driver",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "(un)official Redux Action and State driver for Cycle.js",
   "author": "Sunny G <sunny.gonna@gmail.com> (http://blog.sunnyg.io)",
   "homepage": "https://github.com/sunny-g/cycle-redux-driver",
@@ -23,9 +23,9 @@
     "xstream"
   ],
   "scripts": {
-    "build": "webpack",
-    "build:watch": "npm run build -- --watch",
-    "prepublish": "npm test && tsc && npm run build",
+    "build": "tsc && webpack",
+    "build:watch": "tsc --watch & webpack --watch",
+    "prepublish": "npm test && npm run build",
     "test": "jest --no-cache",
     "test:watch": "npm run test -- --watch"
   },
